<resources>
    <string name="app_name">FISE v2 Concierge</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">History</string>
    <string name="reminders">Reminders</string>
    <string name="alarms">Alarms</string>
    <string name="timers">Timers</string>
    <string name="help">Help</string>
    <string name="fise_v2_concierge_made_by_calin_hadarean_ernest_nkansah_badu_and_mohammad_ali_syed">FISE v2 Concierge: Made by Calin Hadarean, Ernest Nkansah-Badu and Mohammad Ali Syed</string>
    <string name="tap_to_start_concierge">Tap to start concierge</string>
    <string name="concierge_is_listening">Concierge is listening</string>
    <string name="ucl_logo_description">UCL Logo</string>
    <string name="header_description">Header</string>
    <string name="ibm_logo_description">IBM Logo</string>
    <string name="start_concierge_icon_description">Tap to start concierge icon</string>
    <string name="conciergeStatus">Concierge is not on</string>
    <string name="Test">Api Test</string>
    <string name="register_text">Connect with your admin by entering your three registration codes on the \'Register\' page. You will then be able to see your history and call your Gp, Dentist and Optometrist. For more help, see some of the commands you can use below.</string>
    <string name="helpText1"><u>Weather</u> \nSay: \'What is the weather like in London today?\'</string>
    <string name="helpText2"><u>Stocks</u> \nSay: \'What is the stock value of IBM?\'</string>
    <string name="helpText3"><u>Search Recipe by Name</u> \nSay: \'Tell me a recipe for Ramen\'</string>
    <string name="helpText4"><u>Search Recipe by Ingredient</u> \nSay: \'Tell me a recipe using fish\'</string>
    <string name="helpText5"><u>Search for Random Recipe</u> \nSay: \'Tell me a recipe\'</string>
    <string name="helpText6"><u>Read Out a Recipe</u> \nFirst search for a recipe eg \'Tell me a recipe for Ramen\'. Then say: \'Read out that recipe\'</string>
    <string name="helpText7"><u>Search for a Charity</u> \nSay: \'Tell me about the charity Oxfam\'</string>
    <string name="helpText8"><u>Search for a Charity by Location</u> \nSay: \'Give me the name of a charity in Liverpool\'</string>
    <string name="helpText9"><u>Nearest Bus/Train Station</u> \nSay: \'Tell me where the nearest train station is\'</string>
    <string name="helpText10"><u>Search for Specific Bus Stop/Train Station</u> \nSay: \'Tell me where Euston train station is\'</string>
    <string name="helpText11"><u>Jokes</u> \nSay: \'Tell me a joke\'</string>
    <string name="helpText12"><u>Search for a Book by Name</u> \nSay: \'Tell me about the book Frankenstein\'</string>
    <string name="helpText13"><u>Search for a Book by Category</u> \nSay: \'Tell me about a Romance book\'</string>
    <string name="helpText14"><u>Open a Book</u> \n First search for a book eg \'Tell me about the book Frankenstein\'. Then say: \'Open that book\'</string>
    <string name="helpText15"><u>News</u> \nSay: \'Tell me news about Boris Johnson\'</string>
    <string name="helpText17"><u>Dictionary</u> \nSay: \'What does the word sunshine mean?\'</string>
    <string name="helpText18"><u>Thesaurus</u> \nSay: \'Give me synonyms of happiness\'</string>
    <string name="helpText19"><u>Air Quality</u> \nSay: \'What is the air quality in London?\'</string>
    <string name="helpText20"><u>Open an app on your phone</u> \nSay: \'Open YouTube\'</string>
    <string name="helpText21"><u>Call your contacts</u> \nSay: \'Call Bob\'</string>
    <string name="helpText22"><u>Message your contacts</u> \nSay: \'Message Bob\'</string>
    <string name="helpText23"><u>Navigate Concierge App</u> \nSay: \'Go to the History page\'</string>
    <string name="helpText24"><u>Search for items online</u> \nSay: \'Search Amazon for Jam\'</string>
    <string name="helpText25"><u>Search Yell</u> \nSay: \'Find me a plumber\'</string>
</resources>