<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">
    <!--    android:paddingTop="?attr/actionBarSize"-->

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/nav_view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="0dp"-->
    <!--        android:layout_marginEnd="0dp"-->
    <!--        android:background="?android:attr/windowBackground"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:menu="@menu/bottom_nav_menu" />-->

    <!--    <androidx.fragment.app.FragmentContainerView-->
    <!--        android:id="@+id/nav_host_fragment"-->
    <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:defaultNavHost="true"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/nav_view"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:navGraph="@navigation/mobile_navigation" />-->

    <Button
        android:id="@+id/help_view_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/help"
        app:backgroundTint="#1FCD66"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide9"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide8"
        tools:text="help" />

    <Button
        android:id="@+id/history_view_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"

        android:text="@string/history"
        app:backgroundTint="#1FCD66"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide5"
        app:layout_constraintEnd_toEndOf="@id/verticalGuide2"
        app:layout_constraintStart_toStartOf="@id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide4"
        tools:text="history" />

    <Button
        android:id="@+id/reminders_view_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/reminders"
        app:backgroundTint="#1FCD66"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide6"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide5" />

    <Button
        android:id="@+id/timers_view_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/timers"
        app:backgroundTint="#1FCD66"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide8"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide7"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/alarms_view_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/alarms"
        app:backgroundTint="#1FCD66"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide7"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide6" />

    <ImageView
        android:id="@+id/headerBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/header_description"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/box" />

    <EditText
        android:id="@+id/conciergeStatusText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/conciergeStatus"
        android:inputType="textPersonName"
        android:keepScreenOn="false"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tapToStartText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tap_to_start_concierge"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <ImageView
        android:id="@+id/ibmLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ibm_logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide10"
        app:srcCompat="@drawable/ibm_logo" />

    <ImageView
        android:id="@+id/uclLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/ucl_logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide2"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide10"
        app:srcCompat="@drawable/ucl_logo" />

    <ImageView
        android:id="@+id/tapToStartConciergeIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/start_concierge_icon_description"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide2"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>